# LifeMash-NewsCollector

./: .gitignore  collect_kr_en.sh  collect_kr_en_firestore.sh  kr_domains.json  pyproject.toml
.github/workflows/: collect.yml
news_collector/: api.py  cli.py  collector.py  constants.py  db.py  db_firestore.py  utils.py
scripts/: backfill_published_ts.py
tests/: conftest.py  test_api.py  test_cli.py  test_collector.py  test_db.py  test_utils.py
